--- a/lab1/deploy/nginx/html/static/main.css
+++ b/lab1/deploy/nginx/html/static/main.css
@@ -21,8 +21,7 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-    width: 700px;
-    max-width: 100%;
+    min-width: 700px;
     margin-top: 20px;
     margin-bottom: 20px;
 }
