--- a/lab1/deploy/nginx/html/static/main.css
+++ b/lab1/deploy/nginx/html/static/main.css
@@ -1,5 +1,4 @@
 body {
-    font-family: 'Roboto', sans-serif;
     background-color: #f0f4f8;
     color: #333;
     margin: 0;
@@ -91,6 +90,9 @@ canvas {
 }
 
 button {
+    font-family: "Press Start 2P", system-ui;
+	font-weight: 400;
+	font-style: normal;
     grid-column: span 2;
     padding: 10px;
     background-color: #ff00dd;
