--- a/lab1/deploy/nginx/html/static/main.css
+++ b/lab1/deploy/nginx/html/static/main.css
@@ -133,3 +133,16 @@ button:hover {
 	border: 1px solid #dddddd;
 	padding: 5px;
 }
+
+.floating-message {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background-color: #f44336;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    display: none;
+ }
